Refactored everything into sensible folders using blueprints

--- a/app/calendar/templates/calendar.html
+++ b/app/calendar/templates/calendar.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="title">Calendar</h1>
+    <h1 class="title has-text-center-top">Calendar</h1>
 {% endblock %}
