--- a/app/auth/templates/signup.html
+++ b/app/auth/templates/signup.html
@@ -7,7 +7,7 @@
         {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-                {{ messages[0] }} Go to <a href="{{ url_for('auth.login') }}">login here</a>.
+                {{ messages[0] }} Go to <a href="{{ url_for('auth_bp.login') }}">login here</a>.
             </div>
         {% endif %}
         {% endwith %}
