Fixed some stuff I missed

--- a/app/appointments/templates/appointments.html
+++ b/app/appointments/templates/appointments.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title has-text-center-top">
-  Welcome, {{ name }}!!!
-</h1>
+    <h1 class="title has-text-centered">
+        Naročila
+    </h1>
 {% endblock %}
