--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title has-text-centered">
-  Flask Login Template
+  Ginger Alerts
 </h1>
 <h2 class="subtitle has-text-centered">
-  Login authentication framework for later use.
+  An SMS alert site in the making.
 </h2>
 {% endblock %}
