--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
     <div class="hero-head">
         <nav class="navbar" role="navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
+                <a class="navbar-item" href="{{ url_for('home_bp.index') }}">
                     <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                 </a>
 
@@ -31,7 +31,7 @@
                 <div class="navbar-start">
                     {% if current_user.is_authenticated %}
                         <div class="navbar-item">
-                            <a href="{{ url_for('home_bp.appointments') }}" class="button">Naročila</a>
+                            <a href="{{ url_for('appointments_bp.appointments') }}" class="button">Naročila</a>
                         </div>
                         <div class="navbar-item">
                             <a href="{{ url_for('calendar_bp.calendar') }}" class="button">Koledar</a>
@@ -51,6 +51,7 @@
                         </a>
                     {% endif %}
                     {% if current_user.is_authenticated %}
+                        <a class="navbar-item">{{ current_user.name }}</a>
                         <a href="{{ url_for('auth_bp.logout') }}" class="navbar-item">
                             Logout
                         </a>
