--- a/app/auth/templates/signup.html
+++ b/app/auth/templates/signup.html
@@ -1,46 +1,66 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="column is-4 is-offset-4">
-    <h3 class="title has-text-centered">Sign Up</h3>
-    <div class="box">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="notification is-danger">
-                {{ messages[0] }} Go to <a href="{{ url_for('auth_bp.login') }}">login here</a>.
-            </div>
-        {% endif %}
-        {% endwith %}
-        <form action="/signup" method="POST">
-            <div class="field">
-                <label class="label">Email</label>
-                <div class="control">
-                    <input class="input" type="email" name="email" placeholder="Email" autofocus="" required>
-                </div>
-            </div>
+    <div class="column is-4 is-offset-4">
+        <h3 class="title has-text-centered">Sign Up</h3>
+        <div class="box">
+            {% with messages = get_flashed_messages(category_filter=['name_not_unique']) %}
+                {% if messages %}
+                    <div class="notification is-danger">
+                        {{ messages[0] }} Go to <a href="{{ url_for('auth_bp.login') }}">Login instead?</a>.
+                    </div>
+                {% endif %}
+            {% endwith %}
+            <form action="/signup" method="POST">
+                {{ register_form.hidden_tag() }}
+                <div class="field">
+                    {{ register_form.email.label(class="label") }}
+                    <div class="control">
+                        {% if register_form.email.errors %}
+                            {{ register_form.email(class="input is-danger") }}
+                            {% for error in register_form.email.errors %}
+                                <p class="help is-danger">{{ error }}</p>
+                            {% endfor %}
+                        {% else %}
+                            {{ register_form.email(class="input") }}
 
-            <div class="field">
-                <label class="label has-text-grey">Name</label>
-                <div class="control">
-                    <input class="input" type="text" name="name" placeholder="Name" autofocus="" minlength="3" maxlength="15" required>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-
-            <div class="field">
-                <label class="label has-text-grey-light">Password</label>
-                <div class="control">
-                    <input class="input" type="password" name="password" placeholder="Password" minlength="8" required>
+                <div class="field">
+                    {{ register_form.name.label(class="label") }}
+                    <div class="control">
+                        {% if register_form.name.errors %}
+                            {{ register_form.name(class="input is-danger") }}
+                            {% for error in register_form.name.errors %}
+                                <p class="help is-danger">{{ error }}</p>
+                            {% endfor %}
+                        {% else %}
+                            {{ register_form.name(class="input") }}
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
-            <div class="field">
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Remember me
-                </label>
-            </div>
 
-            <button class="button is-block is-info is-fullwidth">Sign Up</button>
-        </form>
+                <div class="field">
+                    {{ register_form.password.label(class="label") }}
+                    <div class="control">
+                        {% if register_form.password.errors %}
+                            {{ register_form.password(class="input is-danger") }}
+                            {% for error in register_form.password.errors %}
+                                <p class="help is-danger">{{ error }}</p>
+                            {% endfor %}
+                        {% else %}
+                            {{ register_form.password(class="input") }}
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="field">
+                    {{ register_form.remember.label(class="checkbox") }}
+                    {{ register_form.remember(class="checkbox") }}
+                </div>
+                {{ register_form.recaptcha }}
+                {{ register_form.submit(class="button is-block is-info is-large is-fullwidth") }}
+            </form>
+        </div>
     </div>
-</div>
 {% endblock %}
