--- a/app/static/base.css
+++ b/app/static/base.css
@@ -20,3 +20,12 @@
     max-width: 35rem;
     margin: auto;
 }
+
+.table {
+    margin: auto;
+}
+
+tbody {
+    max-height: 5rem;
+    overflow-y: scroll;
+}
