--- a/app/templates/_input_text.html
+++ b/app/templates/_input_text.html
@@ -1,13 +1,13 @@
-{% macro input_text(form_name) %}
-    {{ form_name.label(class="label") }}
+{% macro input_text(input_name) %}
+    {{ input_name.label(class="label") }}
     <div class="control">
-        {% if form_name.errors %}
-            {{ form_name(class="input is-danger") }}
-            {% for error in form_name.errors %}
+        {% if input_name.errors %}
+            {{ input_name(class="input is-danger") }}
+            {% for error in input_name.errors %}
                 <p class="help is-danger">{{ error }}</p>
             {% endfor %}
         {% else %}
-            {{ form_name(class="input") }}
+            {{ input_name(class="input") }}
         {% endif %}
     </div>
 {% endmacro %}
