--- a/app/clients/templates/clients.html
+++ b/app/clients/templates/clients.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block stylesheet %}
+    <link rel="stylesheet" href="{{ url_for('.static', filename='clients.css') }}">
+{% endblock %}
+
 {% block content %}
     <h1 class="title has-text-centered">Stranke</h1>
     <div class="table-container">
