--- a/app/static/autocomplete.css
+++ b/app/static/autocomplete.css
@@ -1,49 +1,101 @@
-* { box-sizing: border-box; }
-body {
-  font: 16px Arial;
+* {
+    box-sizing: border-box;
 }
-.autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
+
+h1, h2, p, form, label {
+    text-align: center;
 }
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
+
+h1, h2 {
+    margin-top:1.5em;
+    margin-bottom:0.5em;
 }
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
+
+
+.typeahead {
+    width: 90%;
+    max-width: 700px;
+    margin: auto;
+    display: block;
+    padding-bottom: 30px;
+    position: relative;
 }
-input[type=submit] {
-  background-color: DodgerBlue;
-  color: #fff;
+
+.typeahead input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 700px;
+    opacity: 1;
+    background: none 0% 0% / auto repeat scroll padding-box border-box rgb(255, 255, 255);
 }
-.autocomplete-items {
-  position: absolute;
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
+
+.twitter-typeahead {
+    width: 100%;
 }
-.autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  border-bottom: 1px solid #d4d4d4;
+
+.twitter-typeahead .tt-query,
+.twitter-typeahead .tt-hint {
+    margin-bottom: 0;
 }
-.autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9;
+
+.typeahead ul, .typeahead li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    font-size: 100%;
+    vertical-align: baseline;
 }
-.autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: lightgrey !important;
-  color: #ffffff;
+
+
+.tt-menu, .ui-menu {
+    width: 100%;
+    max-width: 700px;
+    margin-top: 2px;
+    padding: 5px 0;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    background-clip: padding-box;
+
+}
+
+.tt-suggestion, .ui-menu-item {
+    display: block;
+    padding: 6px 20px;
+}
+
+
+.ui-helper-hidden-accessible {
+    display: none;
+}
+
+.typeahead-footer{
+    border-top:1px solid #eee;
+    margin-top:10px;
+    padding: 20px;
+}
+
+
+
+.author {
+    color: #666
+}
+
+.author strong {
+    color: #444
+}
+
+.score {
+    color: #888;
+}
+
+td{
+    vertical-align: top;
+    text-align: left;
 }
