--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <title>Flask Auth Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/app/static/base.css">
+    <script src="https://kit.fontawesome.com/b776fe45c0.js" crossorigin="anonymous"></script>
     {% block stylesheet %}
     {% endblock %}
 </head>
@@ -58,7 +59,8 @@
         </div>
         {% if current_user.is_authenticated %}
             <div class="buttons has-addons is-right is-bottom dodaj">
-                <a class="button is-danger is-rounded" href="{{ url_for('appointments_bp.add_appointment') }}">Dodaj naročilo</a>
+                <a class="button is-danger is-rounded" href="{{ url_for('appointments_bp.add_appointment') }}">Dodaj
+                    naročilo</a>
                 <a class="button is-danger is-rounded" href="{{ url_for('clients_bp.add_client') }}">Dodaj stranko</a>
             </div>
         {% endif %}
