--- a/app/appointments/templates/appointments.html
+++ b/app/appointments/templates/appointments.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {% from "_appointment_list_item.html" import appointment_list_item %}
     <h1 class="title has-text-centered">
         Naročila
     </h1>
