--- a/app/appointments/templates/appointments.html
+++ b/app/appointments/templates/appointments.html
@@ -3,6 +3,31 @@
 {% block content %}
     {% from "_appointment_list_item.html" import appointment_list_item %}
     <h1 class="title has-text-centered">
-        Naročila
+        Termini
     </h1>
+    <div class="container is-max-desktop">
+        <hr>
+        {% for year in schedule %}
+            <div class="box" id="messages" style="background-color: orange" data-example>
+                <h1 class="title is-4 mb-2">{{ year }}</h1>
+                {% for month in schedule[year] %}
+                    <div class="box" id="messages" style="background-color: deepskyblue" data-example>
+                        <h1 class="title is-4 mb-2">{{ month }}</h1>
+                        {% for day in year[month] %}
+                            <div class="box" id="messages" style="background-color: green" data-example>
+                                <h1 class="title is-4 mb-2">{{ day }}</h1>
+                                <div class="list has-visible-pointer-controls">
+                                    {% for appointment in appointment_list %}
+                                        {% if day == appointment.time_of_appointment.day %}
+                                            {{ appointment_list_item(appointment) }}
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
