--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"/>
     <link rel="stylesheet" href="/app/static/base.css">
     <script src="https://kit.fontawesome.com/b776fe45c0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/app/static/bulma-list.css">
+    <link rel="stylesheet" href="/app/static/bulma-list.css.map">
+
     {% block stylesheet %}
     {% endblock %}
 </head>
@@ -46,7 +49,7 @@
         {% if current_user.is_authenticated %}
             <div class="buttons are-medium gumbi-navigacija">
                 <a href="{{ url_for('appointments_bp.appointments') }}"
-                   class="button is-danger is-outlined is-rounded">Naročila</a>
+                   class="button is-danger is-outlined is-rounded">Termini</a>
                 <a href="{{ url_for('calendar_bp.calendar') }}"
                    class="button is-danger is-outlined is-rounded">Koledar</a>
                 <a href="{{ url_for('clients_bp.clients') }}"
@@ -60,7 +63,7 @@
         {% if current_user.is_authenticated %}
             <div class="buttons has-addons is-right is-bottom dodaj">
                 <a class="button is-danger is-rounded" href="{{ url_for('appointments_bp.add_appointment') }}">Dodaj
-                    naročilo</a>
+                    termin</a>
                 <a class="button is-danger is-rounded" href="{{ url_for('clients_bp.add_client') }}">Dodaj stranko</a>
             </div>
         {% endif %}
