--- a/app/appointments/templates/appointments.html
+++ b/app/appointments/templates/appointments.html
@@ -13,12 +13,12 @@
                 {% for month in schedule[year] %}
                     <div class="box" id="messages" style="background-color: deepskyblue" data-example>
                         <h1 class="title is-4 mb-2">{{ month }}</h1>
-                        {% for day in year[month] %}
-                            <div class="box" id="messages" style="background-color: green" data-example>
-                                <h1 class="title is-4 mb-2">{{ day }}</h1>
+                        {% for day in schedule[year][month] %}
+                            <div class="box" id="messages" data-example>
+                                <h1 class="title is-4 mb-2">{{ day }}.</h1>
                                 <div class="list has-visible-pointer-controls">
                                     {% for appointment in appointment_list %}
-                                        {% if day == appointment.time_of_appointment.day %}
+                                        {% if day == appointment.time_of_appointment.day and month == appointment.time_of_appointment.strftime('%B') and year == appointment.time_of_appointment.year %}
                                             {{ appointment_list_item(appointment) }}
                                         {% endif %}
                                     {% endfor %}
