--- a/app/clients/templates/clients.html
+++ b/app/clients/templates/clients.html
@@ -7,7 +7,7 @@
 {% block content %}
     {% from "_client_list_item.html" import client_list_item %}
     <h1 class="title has-text-centered">Stranke</h1>
-    <div class="container is-max-desktop">
+    <div class="container is-max-desktop is-centered">
         <hr>
         {% for client in client_list %}
             {{ client_list_item(client) }}
